<resources>
    <string name="app_name">TMDB</string>
    <string name="registrarme">¿No tienes cuenta? Registrate</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="regitrarse">Regitrarse</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
</resources>